# cuEST-CLI-Experiment

./: .gitignore  CMakeLists.txt  README.md
cuest_wrapper/include/cuest_wrapper/: basis.hpp  basis_json.hpp  constants.hpp  context.hpp  gradients.hpp  grid.hpp  integrals.hpp  molecule.hpp  nvtx.hpp  parsers.hpp  raii.hpp  scf.hpp
cuest_wrapper/src/: basis_ecp.cpp  integrals.cpp  scf.cpp
data/: cc-pvdz.gbs  cc-pvtz.gbs  def2-qzvp.gbs  def2-svp-ecp.gbs  def2-svp.gbs  def2-svpd.gbs  def2-tzvp.gbs  def2-universal-jkfit.gbs  h2.xyz  h2o.xyz  i-ecp.gbs  nh3.xyz  v_H2O_WB97X_def2SVP.xyz  v_NH3_PBE_def2TZVP.xyz
data/molecules/: br2.xyz  ch2i2.xyz  co2.xyz  h2.xyz  oh.xyz
data/molecules/boron_nitride/: boron_nitride_10.xyz  boron_nitride_112.xyz  boron_nitride_130.xyz  boron_nitride_150.xyz  boron_nitride_16.xyz  boron_nitride_170.xyz  boron_nitride_192.xyz  boron_nitride_216.xyz  boron_nitride_24.xyz  boron_nitride_240.xyz  boron_nitride_266.xyz  boron_nitride_294.xyz  boron_nitride_32.xyz  boron_nitride_42.xyz  boron_nitride_54.xyz  boron_nitride_6.xyz  boron_nitride_66.xyz  boron_nitride_80.xyz  boron_nitride_96.xyz
data/molecules/diamond/: diamond_10.xyz  diamond_121.xyz  diamond_147.xyz  diamond_172.xyz  diamond_26.xyz  diamond_35.xyz  diamond_51.xyz  diamond_66.xyz  diamond_78.xyz  diamond_87.xyz
data/molecules/gly/: gly1.xyz  gly10.xyz  gly11.xyz  gly12.xyz  gly14.xyz  gly16.xyz  gly17.xyz  gly18.xyz  gly2.xyz  gly3.xyz  gly6.xyz  gly8.xyz  gly9.xyz
data/molecules/glycine/: glycine_1.xyz  glycine_12.xyz  glycine_128.xyz  glycine_13.xyz  glycine_15.xyz  glycine_16.xyz  glycine_2.xyz  glycine_24.xyz  glycine_3.xyz  glycine_32.xyz  glycine_4.xyz  glycine_48.xyz  glycine_5.xyz  glycine_6.xyz  glycine_64.xyz  glycine_7.xyz  glycine_8.xyz  glycine_96.xyz
data/molecules/medium/: buckminsterfullerene.xyz  chlorophyl_c2.xyz  cholestrol.xyz  circumcoronene.xyz  cucurbit5uril.xyz
data/molecules/small/: bh3.xyz  c2h4.xyz  ch4.xyz  h2o.xyz  hf.xyz  i2.xyz  n2.xyz  nh3.xyz  so2.xyz  warmup.xyz
data/molecules/water/: water_10.xyz  water_120.xyz  water_15.xyz  water_160.xyz  water_20.xyz  water_240.xyz  water_30.xyz  water_320.xyz  water_40.xyz  water_5.xyz  water_50.xyz  water_60.xyz  water_80.xyz
include/cuest_wrapper/: basis.hpp  basis_json.hpp  constants.hpp  context.hpp  gradients.hpp  grid.hpp  integrals.hpp  json_parser.hpp  molecule.hpp  parsers.hpp  raii.hpp  scf.hpp  shell_norm.hpp
src/: atomic_config.cpp  atomic_config.hpp  atomic_config_table.inc  atomic_symmetry.cpp  atomic_symmetry.hpp  basis.cpp  basis_ecp.cpp  basis_ecp_from_json.cpp  basis_from_json.cpp  basis_nvidia.cpp  dfjk_hybrid.hpp  diis.cpp  diis.hpp  diis_kernels.cu  functionals.hpp  grad_numerical.hpp  integrals.cpp  main.cpp  sac_guess.cpp  sac_guess.hpp  sad_guess.cpp  sad_guess.hpp  scf.cpp  scf.hpp
src/io/: basis_json.hpp  parsers.hpp
test/: common.py  constants.py  cuest_results.json  debug_so2.py  decompose_grad.py  download_bases.py  generate_reference.py  reference.json  results_full.json  run_pyscf_test.py  test_water.py  validate.py  validate_cuest.py  validate_energy.py  validate_full.py  validate_hf.py  validate_sad.py  validate_uks.py  validation_results.json
tools/: probe_atom.cpp  probe_operators.cpp  probe_symmetry.cpp  test_atomic_symmetry.cpp
